<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#77CCCC"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="50dp"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/textView_change_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_num_buttons_button"
        android:textAlignment="center" />
    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        
	    <RadioButton
	        android:id="@+id/radioButton3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/buttons3" />
	
	    <RadioButton
	        android:id="@+id/radioButton5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/buttons5" />
	
	    <RadioButton
	        android:id="@+id/radioButton7"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/buttons7" />
	
	    <RadioButton
	        android:id="@+id/radioButton9"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/buttons9" />
	</RadioGroup>

</LinearLayout>